Fixed vertical alignment when direction horizontal
Fixed vertical alignment when direction horizontal

--- a/resources/dynamic/styles.css
+++ b/resources/dynamic/styles.css
@@ -361,6 +361,7 @@ Dim highlightBgSecondaryColor = CurrentADC.PropValue("highlightBgSecondaryColor"
         font-size: {%= CurrentADC.PropValue("responsiveFontSize") %};
         overflow: hidden;
         width: 100%;
+        vertical-align: {%= CurrentADC.PropValue("responsiveVerticalAlign") %};
         {% If (CurrentADC.PropValue("responsiveDirection") = "horizontal") Then %}
         display: table-cell;
         width: 1%;
